# 3d-sound-synthesis

./: .gitignore  LICENSE  README.md
CPP/: CMakeLists.txt  README.md
CPP/include/: WAVFile.h  convolution.h  demo.h  interpolation.h  itd.h  localize.h
CPP/src/: WAVFile.cpp  convolution.cpp  demo.cpp  interpolation.cpp  itd.cpp  localize.cpp  main.cpp
MATLAB/: IRC_1020_C_HRIR.mat  README.md  get_nearest_phi.m  get_nearest_theta.m  get_next_phi.m  get_next_theta.m  get_prev_phi.m  get_prev_theta.m  h.m  hrir_interpolate.m  itd.m  localize.m
