cmake_minimum_required(VERSION 3.19)
project(CPP)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

set(CMAKE_CXX_STANDARD 20)

if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif ()

set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

add_executable(CPP src/main.cpp src/WAVFile.cpp include/WAVFile.h include/interpolation.h src/interpolation.cpp src/convolution.cpp include/convolution.h src/itd.cpp include/itd.h src/localize.cpp include/localize.h src/demo.cpp include/demo.h)

target_link_libraries(CPP PRIVATE sndfile fftw3)